deploy: vinid/webiste-back@5151dce5d30f3fbc1515236644a686dda193f99d

--- a/publication/fantasitc-embeddings/cite.bib
+++ b/publication/fantasitc-embeddings/cite.bib
@@ -1,6 +1,6 @@
 @inproceedings{bianchi2020fantastic,
   title = {Fantastic Embeddings and How to Align Them: Zero-Shot Inference in a Multi-Shop Scenario},
-  author = {\textbf{\textbf{Bianchi}}, Federico and Tagliabue, Jacopo and Yu, Bingqing and Bigon, Luca and Greco, Ciro},
+  author = {Bianchi, Federico and Tagliabue, Jacopo and Yu, Bingqing and Bigon, Luca and Greco, Ciro},
   url = {https://arxiv.org/abs/2007.14906},
   booktitle = {Proceedings of the SIGIR 2020 eCom workshop, July 2020, Virtual Event},
   year = {2020}
