deploy: vinid/webiste-back@0000b0af1b33766752cc0889393569a62e486b07

--- a/publication/cross-lingual-contextualized-topic-models-for-zero-shot/cite.bib
+++ b/publication/cross-lingual-contextualized-topic-models-for-zero-shot/cite.bib
@@ -1,6 +1,15 @@
-@inproceedings{bianchi2021cross,
-  title={Cross-lingual contextualized topic models with zero-shot learning},
-  author={Bianchi, Federico and Terragni, Silvia and Hovy, Dirk and Nozza, Debora and Fersini, Elisabetta},
-  booktitle={In Proceedings of The 16th Conference of the European Chapter of the Association for Computational Linguistics},
-  year={2021}
+@inproceedings{bianchi-etal-2021-cross,
+    title = "Cross-lingual Contextualized Topic Models with Zero-shot Learning",
+    author = "Bianchi, Federico  and
+      Terragni, Silvia  and
+      Hovy, Dirk  and
+      Nozza, Debora  and
+      Fersini, Elisabetta",
+    booktitle = "Proceedings of the 16th Conference of the European Chapter of the Association for Computational Linguistics: Main Volume",
+    month = apr,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/2021.eacl-main.143",
+    pages = "1676--1683",
 }
