--- a/publication/language-in-a-search-box/cite.bib
+++ b/publication/language-in-a-search-box/cite.bib
@@ -1,8 +1,13 @@
-@inproceedings{bianchi2021language,
-  author = {Federico Bianchi and Ciro Greco and Jacopo Tagliabue},
-  booktitle = {NAACL-HLT},
-  keywords = {},
-  publisher = {Association for Computational Linguistics},
-  title = {{Language in a (Search) Box: Grounding Language Learning in Real-World Human-Machine Interaction}},
-  year = 2021
+@inproceedings{bianchi-etal-2021-language,
+    title = "{L}anguage in a ({S}earch) {B}ox: {G}rounding {L}anguage {L}earning in {R}eal-{W}orld {H}uman-{M}achine {I}nteraction",
+    author = "Bianchi, Federico  and
+      Greco, Ciro  and
+      Tagliabue, Jacopo",
+    booktitle = "Proceedings of the 2021 Conference of the North American Chapter of the Association for Computational Linguistics: Human Language Technologies",
+    month = jun,
+    year = "2021",
+    address = "Online",
+    publisher = "Association for Computational Linguistics",
+    url = "https://www.aclweb.org/anthology/2021.naacl-main.348",
+    pages = "4409--4415",
 }
